# Aurora

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_aurora.bat
.github/workflows/: ci.yml
configs/: default.yaml
docs/: run_method_v0.1.txt  v1_0_course_report.md  v1_0_dev_memory.md  v1_0_ppt_outline.md  v1_0_project_guide.md  v1_0_teacher_qa.md  v1_0_tradeeye_integration.md  version_iterations.txt
docs/archive/: build_process_v0.1.txt  grill_notes_v0.1.txt
scripts/: predict.py  prepare_data.py  show_metrics.py  train_lstm.py  train_v2_compare.py  train_v3_robust.py  train_v4_migration_compare.py
src/aurora_ml/: __init__.py  config.py  data_pipeline.py  dataset.py  infer.py  model.py  train.py  utils.py
tests/: test_artifacts.py  test_data_split.py  test_sequence_shapes.py
