[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-ml"
version = "0.4.0"
description = "Aurora v0.4 - robust workflow plus SQL-style time-series feature migration comparison."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "daoyezongzi" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "torch>=2.3",
    "tushare>=1.4.18",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
